--- a/Ultra3.ipynb
+++ b/Ultra3.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# Open directory.\n",
-    "os.chdir('C:/Users/Vince/Documents/Education/BPP')"
+    "os.chdir('https://github.com/Hrunner83/Marathon/blob/main/UTMB%20top%2020.csv')"
    ]
   },
   {
