--- a/Ultra3.ipynb
+++ b/Ultra3.ipynb
@@ -11,7 +11,8 @@
     "import pandas as pd \n",
     "import re\n",
     "import seaborn as sns\n",
-    "import os"
+    "import os",
+    "import matplotlib.pyplot as plt \n"
    ]
   },
   {
