--- a/Ultra3.ipynb
+++ b/Ultra3.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open directory.\n",
+    "# Open directory. Download and change to required directory\n",
     "os.chdir('https://github.com/Hrunner83/Marathon/blob/main/UTMB%20top%2020.csv')"
    ]
   },
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load dataset Top 20 runners from all UTMB races 2003 to 2024.\n",
+    "# Load dataset Top 20 runners from all UTMB races 2003 to 2024. Download data set. \n",
     "Ultra = pd.read_csv('UTMB top 20.csv')"
    ]
   },
