--- a/Ultra3.ipynb
+++ b/Ultra3.ipynb
@@ -943,7 +943,7 @@
     "sns.displot(filtered_speed, kind='hist', bins=30, kde=True, aspect=1.5)\n",
     "\n",
     "#Title and axis labels\n",
-    "plt.title('Distribution of Races by Catergory', fontsize=14, weight='bold')\n",
+    "plt.title('Distribution of Races by Average Speed(km/h)', fontsize=14, weight='bold')\n",
     "plt.xlabel('Athlete Average Speed (km/h)')\n",
     "plt.show()\n",
     "\n"
